# workspace_station

./: .gitignore  README.md  projects.json  pyproject.toml  pyrightconfig.json
.secrets/: README.md
src/workspace/: __init__.py  __main__.py  cache_clean.py  check.py
src/workspace/adapters/: __init__.py  catalog.py  command_runner.py  git.py  secrets.py  workspace.py  workspace_members.py
src/workspace/adapters/cli/: rich_view.py  typer_app.py
src/workspace/application/: cache_clean.py  ports.py  quality.py  use_cases.py
src/workspace/bootstrap/: __init__.py  container.py
src/workspace/domain/: __init__.py  models.py
tests/: test_cache_clean.py  test_catalog.py  test_git_adapter.py  test_quality.py  test_use_cases.py  test_workspace_members.py
